--- a/index.html
+++ b/index.html
@@ -35,27 +35,13 @@
                 <div><button class="button search">Search</button></div>
             </div>
         </div>
+        <div class="row board">
+            <div class="col-sm-5 cards"></div>
+            <div class="col-sm-2 ready-close-container"></div>
+            <div class="col-sm-5 cards"></div>
+        </div>
     </div>
-    
-    <!-- <div class="container">
-        <div class="row">
-            <div class="col-md-6">User1</div>
-            <div class="col-md-6">User2</div>
-        </div>
-        <div class="row">
-            <div class="col-12">
-                <div class="row">
-                    <div class="col-12">Card</div>
-                </div>
-                <div class="row">
-                    <div class="col-12">I'm ready</div>
-                </div>
-                <div class="row">
-                    <div class="col-12">card</div>
-                </div>
-            </div>
-        </div>
-    </div> -->
+
     <!-- Bootstrap JS & jQuery CDN-->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
