still working on firebase

--- a/index.html
+++ b/index.html
@@ -25,20 +25,20 @@
             <div class="col-md-12 col-centered">
                 <div class="player1">
                     <button class="pulse-button player-one"></button>
-                    <p class="usernames" id="username1">andres</p>
+                    <p class="usernames" id="username1"></p>
                 </div>
                 <div class="player2">
                     <button class="pulse-button player-two"></button>
-                    <p class="usernames" id="username2">mario</p>
+                    <p class="usernames" id="username2"></p>
                 </div>
-                <!-- <input id="username" placeholder="Name" class="form-control" type="text"> -->
+                <input id="username" placeholder="Name" class="form-control" type="text">
                 <div><button class="button search">Search</button></div>
             </div>
         </div>
         <div class="row board">
-            <div class="col-sm-5 cards"></div>
+            <div class="col-sm-5 cards cards-container-1"></div>
             <div class="col-sm-2 ready-close-container"></div>
-            <div class="col-sm-5 cards"></div>
+            <div class="col-sm-5 cards cards-container-2"></div>
         </div>
     </div>
 
