working on game visuals

--- a/index.html
+++ b/index.html
@@ -35,10 +35,14 @@
                 <div><button class="button search">Search</button></div>
             </div>
         </div>
+        <div class="row">
+            <div class="col-sm-6 choices cards-choice-1"></div>
+            <div class="col-sm-6 choices cards-choice-2"></div>
+        </div>
         <div class="row board">
-            <div class="col-sm-5 cards cards-container-1"></div>
-            <div class="col-sm-2 ready-close-container"></div>
-            <div class="col-sm-5 cards cards-container-2"></div>
+            <div class="col-sm-6 cards cards-container-1"></div>
+            <!-- <div class="col-sm-2 ready-close-container"></div> -->
+            <div class="col-sm-6 cards cards-container-2"></div>
         </div>
     </div>
 
