--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!-- Custom css -->
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/scoreboard.css" />
 </head>
 <body>
 
     <div class=".container-fluid">
-        <div class="row">
+        <div class="row row-centered">
             <div class="col-md-12 col-centered">
                 <div class="player1">
                     <button class="pulse-button player-one"></button>
@@ -31,18 +32,40 @@
                     <button class="pulse-button player-two"></button>
                     <p class="usernames" id="username2"></p>
                 </div>
-                <input id="username" placeholder="Name" class="form-control" type="text">
+                <div class="userInput">
+                    <input id="username" placeholder="Name" class="form-control" type="text">
+                </div>
                 <div><button class="button search">Search</button></div>
             </div>
         </div>
-        <div class="row">
+        <div class="row middle">
             <div class="col-sm-6 choices cards-choice-1"></div>
             <div class="col-sm-6 choices cards-choice-2"></div>
         </div>
         <div class="row board">
-            <div class="col-sm-6 cards cards-container-1"></div>
-            <!-- <div class="col-sm-2 ready-close-container"></div> -->
-            <div class="col-sm-6 cards cards-container-2"></div>
+            <div class="col-sm-4 cards cards-container-1"></div>
+            <!-- socore -->
+            <div class="col-sm-4 score">
+                <div class="scoreboard">
+                    <div class="team gsw win">
+                      <div class="rank">1</div>
+                      <img class="logo" src="http://i.cdn.turner.com/nba/nba/teamsites/images/legacy/warriors/1112_GSW3_300.png">
+                      <div class="name">AND</div>
+                      <div class="score score1">4</div>
+                      <div class="record record1">6</div>
+                    </div>
+                    <div class="divider"><p>VS</p></div>
+                    <div class="team utc">
+                      <div class="rank">2</div>
+                      <img class="logo" src="http://www.stickpng.com/assets/images/58419bb6a6515b1e0ad75a55.png">
+                      <div class="name">SUN</div>
+                      <div class="score score2">9</div>
+                      <div class="record record2">1</div>
+                    </div>
+                  </div>
+            </div>
+            <!-- end score board-->
+            <div class="col-sm-4 cards cards-container-2"></div>
         </div>
     </div>
 
