--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <!-- Custom css -->
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/main.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/scoreboard.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/textResult.css" />
 </head>
 <body>
 
@@ -26,11 +27,11 @@
             <div class="col-md-12 col-centered">
                 <div class="player1">
                     <button class="pulse-button player-one"></button>
-                    <p class="usernames" id="username1"></p>
+                    <div class="display-player1"></div>
                 </div>
                 <div class="player2">
                     <button class="pulse-button player-two"></button>
-                    <p class="usernames" id="username2"></p>
+                    <div class="display-player2"></div>
                 </div>
                 <div class="userInput">
                     <input id="username" placeholder="Name" class="form-control" type="text">
@@ -39,8 +40,17 @@
             </div>
         </div>
         <div class="row middle">
-            <div class="col-sm-6 choices cards-choice-1"></div>
-            <div class="col-sm-6 choices cards-choice-2"></div>
+            <div class="col-sm-4 choices cards-choice-1"></div>
+            <div class="col-sm-4 choices textResult">
+                <section class="container title-animation">
+                    <h1>
+                      <span class="title item-winner"></span>
+                      <span class="title item-message"></span>
+                      <span class="title item-losser"></span>
+                    </h1>
+                  </section>
+            </div>
+            <div class="col-sm-4 choices cards-choice-2"></div>
         </div>
         <div class="row board">
             <div class="col-sm-4 cards cards-container-1"></div>
@@ -49,18 +59,18 @@
                 <div class="scoreboard">
                     <div class="team gsw win">
                       <div class="rank">1</div>
-                      <img class="logo" src="http://i.cdn.turner.com/nba/nba/teamsites/images/legacy/warriors/1112_GSW3_300.png">
-                      <div class="name">AND</div>
-                      <div class="score score1">4</div>
-                      <div class="record record1">6</div>
+                      <img class="logo" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/173024/jonathanlarradet_copy.png">
+                      <div id="usernameTable1" class="name">AND</div>
+                      <div class="score score1">0</div>
+                      <div class="record record1">0</div>
                     </div>
                     <div class="divider"><p>VS</p></div>
                     <div class="team utc">
                       <div class="rank">2</div>
-                      <img class="logo" src="http://www.stickpng.com/assets/images/58419bb6a6515b1e0ad75a55.png">
-                      <div class="name">SUN</div>
-                      <div class="score score2">9</div>
-                      <div class="record record2">1</div>
+                      <img class="logo" src="assets/images/player_two.png">
+                      <div  id="usernameTable2" class="name">SUN</div>
+                      <div class="score score2">0</div>
+                      <div class="record record2">0</div>
                     </div>
                   </div>
             </div>
@@ -72,7 +82,10 @@
     <!-- Bootstrap JS & jQuery CDN-->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
     <!-- Custom script-->
     <script src="assets/js/app.js"></script>
+    <!-- <script src="assets/js/textResult.js"></script> -->
+    <script src="assets/js/jquery.lettering-0.6.1.min.js"></script>
 </body>
 </html>
