--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <div class="divider"><p>VS</p></div>
                     <div class="team utc">
                       <div class="rank">2</div>
-                      <img class="logo" src="assets/images/player_two.png">
+                      <img class="logo" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/173024/jonathanlarradet_copy.png">
                       <div  id="usernameTable2" class="name">PY2</div>
                       <div class="score score2">0</div>
                       <div class="record record2">0</div>
