--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <div class="team gsw win">
                       <div class="rank">1</div>
                       <img class="logo" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/173024/jonathanlarradet_copy.png">
-                      <div id="usernameTable1" class="name">PY1</div>
+                      <div id="usernameTable1" class="name">PL1</div>
                       <div class="score score1">0</div>
                       <div class="record record1">0</div>
                     </div>
@@ -71,7 +71,7 @@
                     <div class="team utc">
                       <div class="rank">2</div>
                       <img class="logo" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/173024/jonathanlarradet_copy.png">
-                      <div  id="usernameTable2" class="name">PY2</div>
+                      <div  id="usernameTable2" class="name">PL2</div>
                       <div class="score score2">0</div>
                       <div class="record record2">0</div>
                     </div>
@@ -81,6 +81,7 @@
             <div class="col-sm-4 cards cards-container-2"></div>
         </div>
 
+        <!-- Chat -->
         <div class="floating-chat">
             <i class="fa fa-comments" aria-hidden="true"></i>
             <div class="chat">
